[package]
name = "acmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme_core = {git = "https://github.com/conblem/async-acme"}
async-trait = "0.1"
axum = { version = "0.5"}
tokio = { version = "1", features = ["full"]}
base64 = "0.13"
serde = { version = "1", features = [] }
serde_json = { version = "1", features = [] }

[dev-dependencies]
async_acme = {git = "https://github.com/conblem/async-acme"}
hyper-rustls = { version = "0.23", default-features = false, features = ["webpki-tokio", "http1"] }
